[package]
name = "fa_cose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = "0.5.1"
quicli = "0.4"
structopt = "0.3"
yaml-rust = "0.4.5"
tokio = { version = "1.17.0", features = ["time", "rt-multi-thread", "macros"] }
astarte_sdk = { git = "https://github.com/astarte-platform/astarte-device-sdk-rust", branch = "master"}
kv = "0.23.1"
futures = "0.3"
colored = "2"

